force-app/main/default/objects/ssot__PersonalizationPoint__dlm/fields/ssot__MaxItemsCount__c.field-meta.xml
<CustomField>
    <fullName>ssot__MaxItemsCount__c</fullName>
    <label>MaxItems Count</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>MaxItemsCount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>