force-app/main/default/objects/ssot__PersonalizationPoint__dlm/fields/ssot__PersonalizationPointSource__c.field-meta.xml
<CustomField>
    <fullName>ssot__PersonalizationPointSource__c</fullName>
    <label>Personalization Point Source</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>PersonalizationPointSource</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>