force-app/main/default/objects/ssot__PersonalizationPoint__dlm/fields/ssot__PersonalizationPointStatus__c.field-meta.xml
<CustomField>
    <fullName>ssot__PersonalizationPointStatus__c</fullName>
    <label>Personalization Point Status</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>PersonalizationPointStatus</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>