force-app/main/default/objects/ssot__PersonalizationPoint__dlm/fields/ssot__PersonalizationSchemaName__c.field-meta.xml
<CustomField>
    <fullName>ssot__PersonalizationSchemaName__c</fullName>
    <label>Personaliztion Schema Name</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>PersonalizationSchemaName</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>