force-app/main/default/objects/ssot__PersonalizationPoint__dlm/fields/ssot__rel_1711101251880_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1711101251880_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PersonalizationPoint_Personalization_rel</label>
    <referenceTo>ssot__PersonalizationSchema__dlm</referenceTo>
    <relationshipLabel>PersonalizationPoint_Personalization_rel</relationshipLabel>
    <relationshipName>rel_1711101251880_end</relationshipName>
    <type>Lookup</type>
</CustomField>